Actualizacion es posterioir al test
